# mar-len

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  backends.py  urls.py
backend/core/migrations/: 0001_initial.py  0002_remove_funcoes_assistencia_and_more.py  0003_assistentes.py  0004_dadosmilitantes_atuacao_dadosmilitantes_categoria_and_more.py  0005_alter_dadosmilitantes_atuacao_and_more.py  0006_alter_assistentes_options_and_more.py  0007_contribuicoes_referencia.py  0008_contribuicoes_tipo.py  0009_alter_contribuicoes_options_remove_atividades_pauta_and_more.py  0010_recrutamentos.py  0011_remove_recrutamentos_origemrecrutamento_and_more.py  0012_recrutamentos_status.py  0013_recrutamentosacoes.py
backend/core/models/: __init__.py  administradores.py  assistentes.py  atividades.py  atividades_confirmacoes.py  contribuicoes.py  convites.py  dados_militantes.py  funcoes.py  instancias.py  instancias_dados.py  militantes.py  organizacoes.py  recrutamentos.py  recrutamentos_acoes.py  secretariados.py
backend/core/serializers/: __init__.py  assistentes_serializer.py  contribuicoes_serializer.py  convites_serializer.py  dados_militantes_serializer.py  funcoes_serializer.py  funcoes_vincula_serializer.py  instancia_assistente_remove_serializer.py  instancia_assistente_vincula_serializer.py  instancia_convite_serializer.py  (+17 more)
docs/: index.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
(+192 files in other folders)
